fix: get declared constructor